solid/src/main/java/org/example/O/ej1/Bad/Subtract.java
package org.example.O.ej1.Bad;

import lombok.Data;

@Data
public class Subtract implements CalculateOperation{
private double left, right;
private double result;


}
